<resources>
    <string name="app_name">base de datos</string>
    <string name="txt_codigo">Codigo del Producto</string>
    <string name="txt_descripcion">Descripcion del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>
</resources>
